Resolved jdk 14 warnings